@@ -3,7 +3,7 @@
 # xml2docbook.pl - config xml to docbook
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: xml2docbook.pl,v 1.22 2009/10/06 13:15:58 mb Exp $
+# $Id: xml2docbook.pl,v 1.23 2009/12/24 00:51:34 martin Exp $
 # --
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU AFFERO General Public License as published by
@@ -33,14 +33,14 @@ use warnings;
 use Getopt::Std;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.22 $) [1];
+$VERSION = qw($Revision: 1.23 $) [1];
 
 use Kernel::Config;
 use Kernel::System::Log;
 use Kernel::System::Main;
 use Kernel::System::Time;
 use Kernel::System::DB;
-use Kernel::System::Config;
+use Kernel::System::SysConfig;
 
 # create common objects
 my %CommonObject = ();
@@ -53,7 +53,7 @@ $CommonObject{MainObject}      = Kernel::System::Main->new(%CommonObject);
 $CommonObject{TimeObject}      = Kernel::System::Time->new(%CommonObject);
 $CommonObject{EncodeObject}    = Kernel::System::Encode->new(%CommonObject);
 $CommonObject{DBObject}        = Kernel::System::DB->new(%CommonObject);
-$CommonObject{SysConfigObject} = Kernel::System::Config->new(%CommonObject);
+$CommonObject{SysConfigObject} = Kernel::System::SysConfig->new(%CommonObject);
 
 # list Groups
 #my %List = $CommonObject{SysConfigObject}->ConfigGroupList();
